--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 			<version>3.3.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.36</version>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
